# astrodfx

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt  Collection.h  Engine.cxx  Engine.h  Path.cxx  Path.h  Renderer.cxx  Renderer.h  Resource.cxx  Resource.h  ResourceFactory.cxx  ResourceFactory.h  ResourceManager.cxx  ResourceManager.h  ResourceStage.cxx  ResourceType.cxx  ResourceType.h  String.h  Viewport.cxx  Viewport.h  Window.cxx  Window.h
core/tests/: CMakeLists.txt  TestCollection.cxx  TestResource.cxx  TestResourceManager.cxx  TestResourceStage.cxx  TestResourceType.cxx  window.cxx
examples/: CMakeLists.txt
examples/create-simple-window/: CMakeLists.txt  main.cxx
examples/discover-resources/: CMakeLists.txt  main.cxx
examples/main/: CMakeLists.txt  main.cxx
libcore/: CMakeLists.txt  core.cxx  core.h
librender/: CMakeLists.txt  render.cxx  render.h
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  Charsets.cxx  Charsets.h  Collection.cxx  Collection.h  Color.cxx  Color.h  Config.cxx  Config.h  ConfigValidator.cxx  ConfigValidator.h  ConfigValidatorFlags.h  Either.cxx  Either.h  Engine.cxx  Engine.h  EngineConfig.cxx  EngineConfig.h  Exception.cxx  Exception.h  Generator.cxx  Generator.h  GeometryBuffer.cxx  GeometryBuffer.h  Lexer.cxx  Lexer.h  Location.cxx  Location.h  LogAdapter.cxx  LogAdapter.h  LogAdapters.cxx  LogAdapters.h  LogEntry.cxx  LogEntry.h  LogLevel.cxx  LogLevel.h  LogManager.cxx  LogManager.h  Logger.cxx  Logger.h  (+45 more)
libs/core/sys/: TypeName.cxx  TypeName.h
libs/core/tests/: CMakeLists.txt  TestCollection.cxx  TestConfigNode.cxx  TestConfigValidator.cxx  TestEither.cxx  TestEngineConfig.cxx  TestEngineInitialization.cxx  TestLexer.cxx  TestLogger.cxx  TestLoggingConfig.cxx  TestMapCollection.cxx  TestPath.cxx  TestResourceManager.cxx  TestResourceStage.cxx  TestResourceType.cxx  TestStream.cxx  TestString.cxx  TestToken.cxx
libs/formats/: CMakeLists.txt
libs/formats/ini/: IniFactory.cxx  IniFactory.h  IniFile.cxx  IniFile.h  IniGenerator.cxx  IniGenerator.h  IniLexer.cxx  IniLexer.h  IniParser.cxx  IniParser.h  IniSerializer.cxx  IniSerializer.h  IniTokens.cxx  IniTokens.h
libs/formats/json/: JsonFile.cxx  JsonFile.h  JsonGenerator.cxx  JsonGenerator.h  JsonLexer.cxx  JsonLexer.h  JsonParser.cxx  JsonParser.h  JsonSerializer.cxx  JsonSerializer.h  JsonValue.cxx  JsonValue.h  JsonValueType.cxx  JsonValueType.h
libs/formats/tests/: CMakeLists.txt  TestEngineConfigLoadingIni.cxx  TestIniGenerator.cxx  TestIniLexer.cxx  TestIniParser.cxx  TestIniSerializer.cxx  TestJsonGenerator.cxx  TestJsonLexer.cxx  TestJsonParser.cxx  TestJsonSerializer.cxx  TestJsonValue.cxx  TestObjGenerator.cxx  TestObjParser.cxx  TestWavefrontMtlGenerator.cxx  TestWavefrontMtlParser.cxx  TestWavefrontObjGenerator.cxx  TestWavefrontObjParser.cxx
libs/formats/text/: Text.cxx  Text.h  TextFactory.cxx  TextFactory.h
libs/formats/wavefront/mtl/: MtlGenerator.cxx  MtlGenerator.h  MtlLexer.cxx  MtlLexer.h  MtlParser.cxx  MtlParser.h  MtlSerializer.cxx  MtlSerializer.h
libs/math/: CMakeLists.txt  Polygon.cxx  Polygon.h  Rect.cxx  Rect.h  Vector.cxx  Vector.h
libs/math/tests/: CMakeLists.txt  TestRect.cxx  TestVector.cxx
libs/render/: CMakeLists.txt  GLRenderer.cxx  GLRenderer.h  GLViewport.cxx  GLViewport.h  GLWindow.cxx  GLWindow.h
libs/render/tests/: CMakeLists.txt  TestGLWindow.cxx
render/: CMakeLists.txt  GLRenderer.cxx  GLRenderer.h  GLWindow.cxx  GLWindow.h
share/cmake/: BuildOption.CMake  Example.CMake  Testing.CMake
share/test-assets/: test-engine-config-load.ini
shared/CMake/: Testing.CMake
