cmake_minimum_required(VERSION 3.1...3.16)
#
#add_executable(quasarfx-test-create-window-should-initialize window.cxx)
#target_include_directories(quasarfx-test-create-window-should-initialize PRIVATE ..)
#add_test(NAME QuasarFXTestCreateWindowShouldInitialize COMMAND quasarfx-test-create-window-should-initialize)